# GrobnerBasis

./: .gitignore  CMakeLists.txt  Comparator.cpp  Comparator.h  Comparator.hpp  Monic.cpp  Monic.h  MonicComparator.cpp  MonicComparator.h  Monomial.cpp  Monomial.h  Monomial.hpp  Polic.cpp  Polic.h  Polynomial.cpp  Polynomial.h  Polynomial.hpp  README.md  Term.cpp  Term.h  Term.hpp  main.cpp
src/: Basis.hpp  Comparator.hpp  Gauss.hpp  Input.hpp  MF5.hpp  MF5Signature.hpp  Matrix.hpp  ModuleBasis.hpp  ModuleComparator.hpp  ModuleElement.hpp  ModuleMonomial.hpp  ModuleMonomialOrder.hpp  ModuleTerm.hpp  Monomial.hpp  MonomialOrder.hpp  Pairset.hpp  PairsetOrder.hpp  Polynomial.hpp  RB.hpp  RewriteOrder.hpp  Term.hpp
tests/: main.cpp  moduleElement_tests.cpp  monomial_tests.cpp  polynomial_test.cpp  term_tests.cpp
